--- a/css/main.css
+++ b/css/main.css
@@ -147,8 +147,16 @@ p {
 .main-nav ul :hover {
     color: #18365E;
 }
-.main-nav  ul li a {
+
+.menu-link {
     color: #FFFFFF;
+    font-size: 16px;
+    font-weight:bold;
+    text-decoration: none;
+    padding:10px 20px;
+}
+.transparent-link {
+    color: #18365E;
     font-size: 16px;
     font-weight:bold;
     text-decoration: none;
@@ -1487,4 +1495,32 @@ input[type = "submit"]{
 }
 .bg {
     background-color: red;
+}
+/* < -----------------------------About Page----------------------------------------- > */
+.about-banner {
+    position: relative;
+    background: url('../img/about-images/about-banner.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 450px;
+    min-width: 100px;
+}
+.about-banner::after {
+    position: absolute;
+    z-index: 0;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: radial-gradient(circle, rgba(24,54,94,0) 0%, rgba(10,29,45,0.99) 99.96%, #1D262D 100%);
+    content: '';
+}
+.about-banner-content {
+    position: absolute;
+    text-align: left;
+    line-height: 58px;
+    color: #FFFFFF;
+    z-index: 1;
+    padding: 100px 70px;
 }
